# AR_MMD

./: .gitignore  CMakeLists.txt  README.md  build.sh  camera_calibration.py  frame.cc  main.cc  main2.cc  main3.cc  mmd_ar.cc  simulator.cc  simulator.hpp  tracking.hpp  utils.cc  utils.hpp  viewer.cc  viewer.hpp
calibration_empty/: k_param.txt  param.txt
py_tools/: cap.py
src/: frame.hpp  simulator.cc  simulator.cpp  simulator.hpp  tracking.cc  tracking.hpp  viewer.cc
